# runic

./: .gitignore  Cargo.toml  Dockerfile  README.md  Taskfile.yml  config.docker.yaml  docker-compose.yml  rustfmt.toml
grafana/dashboards/: runic.json
grafana/provisioning/dashboards/: dashboards.yaml
grafana/provisioning/datasources/: datasources.yaml
pgadmin/: servers.json
schema/: clickhouse.md  clickhouse.sql  postgres.md  postgres.sql
src/: config.rs  errors.rs  generate.rs  generator.rs  lib.rs  scaffold.rs  templates.rs  utils.rs
src/abis/: erc20.rs  mod.rs  multicall.rs  transfer.rs  v2.rs  v3.rs  v4.rs
src/config/: config.rs  mod.rs
src/cron/: mod.rs  scheduler.rs
src/cron/jobs/: mod.rs  pool_snapshots.rs  refresh_materialized_views.rs  token_snapshots.rs  update_24h_stats.rs  update_price_changes.rs
src/db/: mod.rs
src/db/clickhouse/: client.rs  mod.rs  ops.rs
src/db/models/: chain.rs  checkpoint.rs  event.rs  mod.rs  native_token_price.rs  new_pool.rs  pool.rs  pool_by_token.rs  pool_snapshot.rs  supply_event.rs  token.rs  token_search.rs  token_snapshot.rs  transfer.rs
src/db/postgres/: client.rs  mod.rs  ops.rs
src/pubsub/: mod.rs  redpanda.rs
src/templates/: cargo.rs  config.rs  indexer.rs  lib.rs  mod.rs  rpc.rs
src/utils/: conversion.rs  mod.rs  pool_id.rs  price.rs  tick_math.rs  validation.rs
src/worker/: chains.rs  mod.rs  parser.rs  price_resolver.rs  token_fetcher.rs  worker.rs
template/src/: config.rs  lib.rs  rpc.rs
template/src/api/: capnproto.rs  graphql.rs  grpc.rs  mod.rs
template/src/db/: mod.rs  sql.rs
