[package]
name = "runic"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
log = "0.4"
simple_logger = { version = "5", default-features = false, features = [
    "colors",
] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dialoguer = "0.11"
tera = "1"
ethers-contract-abigen = "2"
ethers-core = "2"

[[bin]]
path = "bin/runic.rs"
name = "runic"
