[package]
name = "runic"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dialoguer = { version = "0.11", features = ["completion"] }
ethers-core = "2"

[[bin]]
path = "bin/runic.rs"
name = "runic"
